# AItheway

./: .gitignore  ai_models.py  app.py  audio_manager.py  background_worker.py  config.py  gallery_manager.py  midjourney_extras.py  midjourney_params.py  minimax_video.py  pyproject.toml  recovery_script.py  storage_manager.py  storage_tasks.py  tailwind.config.js  tasks.py  test_midjourney.py  video_manager.py
static/assets/css/: image-generation-fixes.css  left-nav-bar.css  library.css  plugins.css  premium-features.css  right-sidebar-tags.css  sidebar-fixes.css  style.css  video-queue.css
static/assets/js/: init.js  plugins.js
static/js/: left-nav-bar.js  script.js  sidebar-interactions.js  video-queue.js
templates/: base.html  error-message.html  gallery.html  generate-audio.html  generate-image.html  generate-video.html  index.html  library.html  upload-enhance.html
tests/: test_api.py  test_manager.py  test_redis.py  test_scenarios.py
