[tool.poetry]
name = "aitheway"
version = "0.1.0"
description = "The most powerful AI for impresive quality image"
authors = ["Fable"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.3"
openai = "^1.51.1"
python-dotenv = "1.0.0"
pyjwt = "^2.9.0"
psycopg2-binary = "^2.9.10"
runwayml = "^2.1.6"
redis = {extras = ["hiredis"], version = "^5.2.1"}
aiohttp = "^3.11.12"
numpy = "^2.2.3"


[tool.poetry.group.dev.dependencies]
certifi = "^2025.1.31"
aiohttp = "^3.11.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
